# tell-me-what-i-want-to-hear

./: README.md  pyproject.toml
moral_evaluation/evaluation/: mfq_evaluation_logic.py  pvq_rr_evaluation_logic.py
moral_evaluation/evaluation/data/: mfq1_results2.csv  mfq2_results.csv  pvq_rr_results.csv
moral_evaluation/evaluation/notebooks/: llm-moral-framework-inference-analytics.ipynb
moral_evaluation/prompts/: mfq1_questions.csv  mfq1_system_prompt.md  mfq2_system_prompt.md  pvq_rr_questions.csv  pvq_rr_system_prompt.md
probe_experiments/: probe-experiment-1.ipynb
probe_experiments/counseller-exams/: exp_1_analysis.ipynb
probe_experiments/experiment_4/: design.md
probe_experiments/extreme-crises/: exp_5_analysis.ipynb  experiment_5_results.csv  experiment_5_rubric_split.csv
probe_experiments/follow-up-questions/: experiment_2_results.csv  probe_experiment_2.ipynb
probe_experiments/moral-values-sycophancy/: exp_3_analysis.ipynb  experiment_3_results.csv
probe_experiments/moral-values-sycophancy/moral_evaluation/evaluation/: mfq_evaluation_logic.py  pvq_rr_evaluation_logic.py
probe_experiments/moral-values-sycophancy/moral_evaluation/human_responses/: mfq_human_responses.csv  pvq_human_responses.csv
probe_experiments/notebooks/: probe-experiment-1.ipynb  probe-experiment-3.ipynb  probe-experiment-4.ipynb  probe-experiment-5.ipynb
probe_experiments/results/: experiment_1_results_mft.csv  experiment_1_results_nce.csv  experiment_2_results.csv  experiment_4_results.csv
(+4 files in other folders)
